# DunesTowerDefense

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.cache/clangd/index/: Base.cpp.AB516B00180F179B.idx  Base.hpp.06B51EFC40CB2864.idx  Bee.cpp.583425CFBBF8A818.idx  Bee.hpp.79057E70CCC11F5B.idx  DataLoader.cpp.95502AC1F988BEBE.idx  DataLoader.hpp.56823B2AF4B41322.idx  DuneWorm.cpp.AFD6C21A6AD32DCD.idx  DuneWorm.hpp.F3C790729E8BF434.idx  DungBeetle.cpp.AE4B2AD879AB0B85.idx  DungBeetle.hpp.A746B8A1E9A4592F.idx  Enemy.cpp.342F89C7107C4DF3.idx  Enemy.hpp.D84E3B7F6F39AC16.idx  InputManager.cpp.2FF5CC70340D9BA3.idx  InputManager.hpp.F97631FB2540A069.idx  MainGame.cpp.2F0B0F3F4C8C32CF.idx  MainGame.hpp.483EC2B3ACFB6A83.idx  Projectile.cpp.F3B5E751040865DA.idx  Projectile.hpp.69F018F54601E652.idx  Renderer.cpp.24BB881EC9937851.idx  Renderer.hpp.E6A46DE1A3A2C98F.idx  ResourceManager.cpp.A6EEE2992DAB59E3.idx  ResourceManager.hpp.4C94223720BADCE9.idx  Sprayer.cpp.BB655792F561487D.idx  Sprayer.hpp.D892A6E40C640CED.idx  Sprite.cpp.A2A72DDD56CA713B.idx  Sprite.hpp.A8F9342556945AEB.idx  Stinger.cpp.BF29BA3128113F1D.idx  Stinger.hpp.2D13E5EF0692B06F.idx  Tower.cpp.758EA7EC4187D41E.idx  Tower.hpp.F44DFA0E67EF7C72.idx  VisionManager.cpp.19170B81C7B2234D.idx  VisionManager.hpp.6D20D5A07EB50422.idx  WaveManager.cpp.1646B01645822EDB.idx  WaveManager.hpp.9FC3D8773D242EEE.idx  _fixes.hpp.1FA4DC9343DA7AA8.idx  _vectorize.hpp.7A49EDF3BB33C9EA.idx  common.h.A54EB00072104C90.idx  common.hpp.1BFCD5689DD1967B.idx  compatibility.hpp.CB50EFB4CF8F6D4E.idx  compatibility.inl.28379CE619D88022.idx  (+113 more)
data/shaders/: box_marker.vert  example.glsl  sprite.frag  sprite.vert  topology.frag  topology.vert
include/: InputManager.hpp  MainGame.hpp  WaveManager.hpp  shader_s.h
include/engine/: DataLoader.hpp  KinectSensor.hpp  Renderer.hpp  ResourceManager.hpp  VisionManager.hpp
include/entities/: Base.hpp  Bee.hpp  DuneWorm.hpp  DungBeetle.hpp  Enemy.hpp  Projectile.hpp  Sprayer.hpp  Sprite.hpp  Stinger.hpp  Tower.hpp
include/entities/projectiles/: Projectile.hpp  Rock.hpp  Stinger.hpp
include/entities/towers/: Frog.hpp  Mortar.hpp  Sprayer.hpp  Tower.hpp
include/entities/util/: ITargetable.hpp
src/: InputManager.cpp  MainGame.cpp  WaveManager.cpp  main.cpp
src/engine/: DataLoader.cpp  KinectSensor.cpp  Renderer.cpp  ResourceManager.cpp  VisionManager.cpp
src/entities/: Base.cpp  Bee.cpp  DuneWorm.cpp  DungBeetle.cpp  Enemy.cpp  Mortar.cpp  Projectile.cpp  Sprayer.cpp  Sprite.cpp  Stinger.cpp  Tower.cpp
src/entities/projectiles/: Projectile.cpp  Rock.cpp  Stinger.cpp
src/entities/towers/: Frog.cpp  Mortar.cpp  Sprayer.cpp  Tower.cpp
tests/: test.cpp
tests/test_data/depth_readings/: KinectDepthData-04-05-49.csv  KinectDepthData-04-08-15.csv  KinectDepthData-04-11-03.csv  KinectDepthData-04-13-00.csv
